--- a/pages/lab2.html
+++ b/pages/lab2.html
@@ -8,7 +8,7 @@
 	<div class="main-wrapper">
 		<h1 align="center">Лабораторная работа №2</h1>
 		<p>Требуется разработать индивидуальный проект предварительно поделившись на команды.</p>
-		<img src="../images/img-lab2/img1.png" align="center">
+		<img src="https://kennocke.github.io/pages/images/img-lab2/img1.png" align="center">
 	</dir>
 </body>
 </html>
