--- a/pages/lab1.html
+++ b/pages/lab1.html
@@ -12,9 +12,9 @@
 		<img src="images/img-lab1/img1.1.png">
 		<h3>Шаг 2. Загрузка файлов</h3>
 		<p>Репозиторий создан, теперь нужно загрузить файлы. Для этого необязательно клонировать репозиторий к себе на компьютер или постигать другие нюансы работы с Гитом — можно воспользоваться интерфейсом Гитхаба. Давайте нажмём кнопку «Upload files».</p>
-		<img src="images/img-lab1/img2.png">
+		<img src="images/img-lab1/img2.PNG">
 		<p>Пише комментарий и нажимаем кнопку!</p>
-		<img src="images/img-lab1/img3.png">
+		<img src="images/img-lab1/img3.PNG">
 		<h3>Шаг 3. Проверка работы сайта</h3>
 		<p>Чтобы проверить работу сайта, достаточно перейти по адресу username.github.io, в нашем случае это kennocke.github.io. Вуаля!</p>
 	</dir>
