--- a/pages/lab3.html
+++ b/pages/lab3.html
@@ -7,7 +7,67 @@
 <body>
 	<div class="main-wrapper">
 		<h1 align="center">Лабораторная работа №3</h1>
-		<p>Здесь будет третья лабораторная работа!</p>
-	</dir>
+		<h3>Шаг 1. Разместить на рабочем поле коммутатор и два компьютера и соединить их.</h3>
+		<img src="images/img-lab3/Step1.PNG" width="1170">
+
+		<h3>Шаг 2. Подключить консольный кабель для настройки оборудования.</h3>
+		<img src="images/img-lab3/Step2.PNG" width="1170">
+
+		<h3>Шаг 3. Настроить адресацию на добавленных компьютерах согласно таблице ниже без шлюза по умолчанию.</h3>
+		<img src="images/img-lab3/Step3.PNG" width="1170">
+
+		<h3>Шаг 4. Выполнить проверку работоспособности сети.</h3>
+		<img src="images/img-lab3/Step4.PNG" width="1170">
+
+		<h3>Шаг 5. Добавить на рабочее поле еще один коммутатор с двумя компьютерами и настроить адресацию из другой подсети.</h3>
+		<img src="images/img-lab3/Step5.PNG" width="1170">
+
+		<h3>Шаг 6-7. Соединить коммутаторы между собой и проверить работоспособность сети. В случае неработоспособности сети объяснить причины.</h3>
+		<p>Комментарий: Коммутатор работает на втором (канальном) уровне модели OSI и предназначен для соединения нескольких узлов компьютерной сети в пределах одного или нескольких сегментов сети.
+			За передачу пакетов между разными сетями отвечает маршрутизатор, который работает на третьем (сетевом) уровне модели OSI.</p>
+		<img src="images/img-lab3/Step6.PNG" width="1170">
+
+		<h3>Шаг 8. Добавить маршрутизатор на рабочее поле.</h3>
+		<img src="images/img-lab3/Step8.PNG" width="1170">
+
+		<h3>Шаг 9. Настроить интерфейсы маршрутизатора для существующих подсетей.</h3>
+		<img src="images/img-lab3/Step9.PNG" width="1170">
+
+		<h3>Шаг 10-11. Проверить работоспособность сети. В случае неработоспособности сети объяснить причины.</h3>
+		<img src="images/img-lab3/Step10.PNG" width="1170">
+
+		<h3>Шаг 12. Указать шлюз по умолчанию и отправить сообщение.</h3>
+		<img src="images/img-lab3/Step12.PNG" width="1170">
+
+		<h3>Шаг 13. Добавить на рабочее поле еще один маршрутизатор.</h3>
+		<img src="images/img-lab3/Step13.PNG" width="1170">
+
+		<h3>Шаг 14. Подключить к нему коммутатор и компьютер.</h3>
+		<img src="images/img-lab3/Step14.PNG" width="1170">
+
+		<h3>Шаг 15. Настроить сетевые настройки согласно таблице ниже.</h3>
+		<img src="images/img-lab3/Step15.PNG" width="1170">
+
+		<h3>Шаг 16. Соединить между маршрутизаторы и настроить между ними сеть с префиксом /30.</h3>
+		<img src="images/img-lab3/Step16.PNG" width="1170">
+
+		<h3>Шаг 17-18. Проверить работоспособность сети, отправив сообщение сети A в сеть С и из сети В в сеть С. В случае неработоспособности сети объяснить причины.</h3>
+		<p>Комментарий: Не работает потому что не настроена статическая маршрутизация.</p>
+		<img src="images/img-lab3/Step17.PNG" width="1170">
+
+		<h3>Шаг 19. Настроить статическую маршрутизацию между сетями.</h3>
+		<img src="images/img-lab3/Step19.PNG" width="1170">
+
+		<h3>Шаг 20. Настроить на сетевых устройствах пароли для привилегированного режима.</h3>
+		<img src="images/img-lab3/Step20.PNG" width="1170">
+
+		<h3>Шаг 21. Настроить пароли на сетевых устройствах пароли на подключение через консоль и telnet.</h3>
+		<img src="images/img-lab3/Step21.PNG" width="1170">
+
+		<h3>Шаг 22. Установить баннер на сетевое оборудование.</h3>
+		<img src="images/img-lab3/Step22.PNG" width="1170">
+
+		<h3>Шаг 23. Проверить работу удаленного подключения.</h3>
+		<img src="images/img-lab3/Step23.PNG" width="1170">
 </body>
 </html>
