--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>Портфолио</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="scripts/mainjs.js"></script>
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+</head>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script type="text/javascript">
 	$(function() {
@@ -15,11 +21,6 @@
 		});
 	});
 </script>
-<head>
-	<title>Портфолио</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src="scripts/mainjs.js"></script>
-</head>
 <DIV ID = "toTop"> ^ Наверх </DIV>
 <body>
 	<h1 class="main-title" align="right">Витковский Станислав Евгеньевич ИДМ-19-03</h1>
