Добавил ответ на билет

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 					<div class="button" onclick="lab1()"><p class="first-p">Лабораторная работа №1</p></div>
 					<div class="button" onclick="lab2()"><p>Лабораторная работа №2</p></div>
 					<div class="button" onclick="lab3()"><p>Лабораторная работа №3</p></div>
+					<div class="button" onclick="bilet()"><p>Ответ на билет</p></div>
 				</div>
 			</nav>
 			<main>
 				<div class="main-content">
-					<iframe src="pages/lab1.html" height="2900px" scrolling="no">
+					<iframe src="pages/lab1.html" height="2700px" scrolling="no">
 					</iframe>
 				</div>
 			</main>
