Загрузил вторую лабораторную работу

--- a/pages/lab2.html
+++ b/pages/lab2.html
@@ -7,8 +7,31 @@
 <body>
 	<div class="main-wrapper">
 		<h1 align="center">Лабораторная работа №2</h1>
+		<h3>Цель:</h3>
 		<p>Требуется разработать индивидуальный проект предварительно поделившись на команды.</p>
-		<img src="images/img-lab2/img1.PNG" align="center">
+		<h3>Результат:</h3>
+		<p>В итоге было решено разработать веб-приложение под названием Online Diary.</p>
+		<p>Над созданием данного проекта работали студенты группы ИДМ-19-03 Витковский Станислав Евгеньевич и
+		Фартдинов Богдан Олегович.</p>
+		<p>Online Diary - это онлайн дневник, который поможет вам хранть все ваши мысли всегда под рукой.</p>
+		<p>Возможности нашего проекта:</p>
+		<ul>
+			<li>Мобильность. Можно получить доступ с любого устройства будь-то мобильный телефон, планшет или
+			персональный компьютер. Главный критерий - наличие доступа в интернет;</li>
+			<li>Возможность создавать и редактировать ваши записи, которые представлены в удобном формате слева от редактора текста;</li>
+			<li>Безопасность. Все ваши данные защищены паролем и никто кроме вас не сможет получить доступ.</li>
+		</ul>
+		<p>Веб-приложение включает в себя следующий набор экранов:</p>
+		<p>Главный экран:</p>
+		<img src="images/img-lab2/mainPage.PNG" align="center" width="1170">
+		<p>Страница регистрации:</p>
+		<img src="images/img-lab2/regPage.PNG" align="center" width="1170">
+		<p>Страница авторизации:</p>
+		<img src="images/img-lab2/authPage.PNG" align="center" width="1170">
+		<p>Главная часть веб-приложения. Данная страница содержит редактор текста (центральная часть) и столбец с уже существующими
+		записями (левая часть).</p>
+		<img src="images/img-lab2/workPage.PNG" align="center" width="1170">
+		<p>В будущем планируется дорабатывать проект и сделать его более удобным для использования на любых мобильных устройствах.</p>
 	</dir>
 </body>
 </html>
