--- a/pages/lab2.html
+++ b/pages/lab2.html
@@ -14,6 +14,7 @@
 		<p>Над созданием данного проекта работали студенты группы ИДМ-19-03 Витковский Станислав Евгеньевич и
 		Фартдинов Богдан Олегович.</p>
 		<p>Online Diary - это онлайн дневник, который поможет вам хранть все ваши мысли всегда под рукой.</p>
+		<p>Страница презентации проекта: <a href="https://kennocke.github.io/onlinediary/" target="_blank">kennocke.github.io/onlinediary<a></p>
 		<p>Возможности нашего проекта:</p>
 		<ul>
 			<li>Мобильность. Можно получить доступ с любого устройства будь-то мобильный телефон, планшет или
